2 October 2008
+ RFE #2060159: Pin page link appears in miniadmin if admin mode is
  set to appear there.
+ Fixed bug #2079194. Deleting menu now removes links as well. Thanks
  Tommy.

26 September 2008
+ Added more ajax controls (add and delete) to the admin menu.
+ Updated: javascript/admin_link/

10 Sept 2008
+ getTitle returns link without decoding it. needed to prevent
  breakage with quotation marks.

8 September 2008
+ Fixed bug introduced with ajax deletion

13 August 2008
+ Increased some popup window sizes
+ Move link changed into Ajax call
+ Updated: javascript/move_link/
templates/style.css
templates/menu_layout/basic/menu.tpl
templates/menu_layout/horizontal/menu.tpl

12 August 2008
+ Fixed current link problem with unkeyed items.

19 June 2008
+ Changed admin link wording.

Version 1.4.6
------------------------------------------------------------
6 June 2008
+ restrictView added to loadChildren.

3 June 2008
+ Update to addSortHeaders.
+ Adding missing paging navigation.
+ Updated: templates/admin/menu_list.tpl

Version 1.4.5
------------------------------------------------------------
1 April 2008
+ Work done on submenus appearing.

Version 1.4.4
----------------------------------------------------------------
19 March 2008
+ Trying to get non-keyed menu items highlighted properly.

11 December 2007
+ Added three new menu functions:
  o quickLink - inserts a new link on any menu pinned on all pages;
                passed a title and url.
  o quickKeyLink - same as above but passed key_id
  o updateKeyLink - causes a link to reset its url, title, and active
                    status based on the condition of the current key
                    it is based on.

Version 1.4.3
----------------------------------------------------------------
28 November 2007
+ Removed redundancy.

27 November 2007
+ Menu character limit set in settings now.

1 November 2007
+ Added enableAdminMode function to menu. Called statically.

18 October 2007