@@ -8,5 +8,6 @@ $settings['float_mode']          = 1;
 $settings['max_link_characters'] = 30;
 $settings['miniadmin']           = 0;
 $settings['home_link']           = 1;
+$settings['show_all_admin']      = 1;
 
 ?>
